unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/bt_stripe__Subscription_Item__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. This stores and syncs Subscription Item data.</description>
    <label>Subscription Item</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Subscription Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>