unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Items</relationshipLabel>
    <relationshipName>Subscription_Items</relationshipName>
    <type>Lookup</type>
</CustomField>