unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__OneTimeItemPushed__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__OneTimeItemPushed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the one-time item has been pushed to Stripe.</description>
    <inlineHelpText>If checked, the one-time item has been pushed to Stripe.</inlineHelpText>
    <label>One Time Item Pushed</label>
    <type>Checkbox</type>
</CustomField>