unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__Plan__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Plan related to this Subscription Item.</description>
    <inlineHelpText>The Plan related to this Subscription Item.</inlineHelpText>
    <label>Price</label>
    <referenceTo>bt_stripe__Plan2__c</referenceTo>
    <relationshipLabel>Subscription Items</relationshipLabel>
    <relationshipName>Subscription_Items</relationshipName>
    <type>Lookup</type>
</CustomField>