unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__Quantity__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Quantity__c</fullName>
    <description>The quantity of the plan to which the customer should be subscribed.</description>
    <inlineHelpText>The quantity of the plan to which the customer should be subscribed.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>