unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__Subscription_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription_Item_ID__c</fullName>
    <description>The Payment Gateway&#39;s ID for this record.</description>
    <inlineHelpText>The Payment Gateway&#39;s ID for this record.</inlineHelpText>
    <label>Subscription Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>