unpackaged/main/default/objects/bt_stripe__Subscription_Item__c/fields/bt_stripe__Usage_Threshold__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Usage_Threshold__c</fullName>
    <description>Usage threshold that triggers the subscription to advance to a new billing period.</description>
    <inlineHelpText>Usage threshold that triggers the subscription to advance to a new billing period</inlineHelpText>
    <label>Usage Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>